<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_switcher"
        style="@style/Testing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/command_mode_switcher"
        style="@style/Testing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/command_mode" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pos_cal_switcher"
        style="@style/Testing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibration_position" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/adm_cal_switcher"
        style="@style/Testing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibration_admittance" />

    <!-- <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_tops_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_bottoms_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_dresses_label" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_account_label" /> -->

</merge>