<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdmittanceCalibration">

    <LinearLayout
        style="@style/Widget.Shrine.Backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingBottom="100dp">

        <include layout="@layout/shr_backdrop" />
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_app_bar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_gt_logo_3"
            app:titleTextColor="@color/colorAccent"
            app:title="@string/home" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/grid_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/productGridBackgroundColor"
        android:elevation="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="20dp">



            <LinearLayout
                android:id="@+id/sign_out_container"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="0dp"
                >


                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Shrine.Button"
                    android:layout_marginStart="250dp"

                    android:backgroundTint="@color/toggle_button"
                    android:text="@string/signOutText"
                    android:textColor="@color/toggle_text" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_button_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/sign_out_container"
                android:layout_margin="0dp">

                <Button
                    android:id="@+id/command_button_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commandText"
                    android:backgroundTint="@color/toggle_button"
                    android:textColor="@color/toggle_text"
                    app:icon="@drawable/ic_record_voice_over_black_18dp"
                    app:iconTint="@color/icon_button"/>


            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/command_text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/commandPlaceholder"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:layout_below="@+id/toggle_button_home"
                />

            <ImageView
                android:id="@+id/gt_logo_home"
                android:layout_width="128dp"
                android:layout_height="64dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/gt_logo_svg"
                android:layout_below="@id/command_text_home"
                android:contentDescription="@string/gt_logo_content_description"/>

            <TextView
                android:id="@+id/welcome_text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/welcome"
                android:layout_marginTop="10dp"

                android:textSize="32sp"
                android:layout_below="@+id/gt_logo_home"
                />


            <LinearLayout
                android:id="@+id/up_down_container_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="250dp"
                android:layout_below="@+id/welcome_text_home">


            </LinearLayout>









        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>