<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdmittanceCalibration">

    <LinearLayout
        style="@style/Widget.Shrine.Backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingBottom="100dp">
        <include layout="@layout/shr_backdrop" />
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/command_mode_app_bar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_gt_logo_3"
            app:titleTextColor="@color/colorAccent"
            app:title="@string/command_mode" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/grid_command_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/productGridBackgroundColor"
        android:elevation="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="20dp">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/save_progress_com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="@style/SaveProgressIndicator"
                android:visibility="invisible"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_button_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/command_button_com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commandText"
                    android:layout_marginStart="30dp"
                    android:backgroundTint="@color/toggle_button"
                    android:textColor="@color/toggle_text"
                    app:icon="@drawable/ic_record_voice_over_black_18dp"
                    app:iconTint="@color/icon_button"/>



            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:id="@+id/transfer_button_container_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                android:layout_below="@+id/toggle_button_com"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/command_text_com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/commandPlaceholder"
                    android:layout_marginTop="0dp"
                    android:textSize="28sp"
                    />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/verify_button_command"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp">

                    <Button
                        android:id="@+id/verify_toggle_command"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/toggle_button"
                        android:text="@string/verify"
                        android:textColor="@color/colorPrimary" />

                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/up_down_container_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="150dp"
                android:layout_below="@+id/toggle_button_com">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/up_button_com"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_arrow_circle_up_black_18dp"
                    style="@style/IconOnlyButton"
                    android:layout_weight="1.0"
                    />

                <TextView
                    android:id="@+id/forceNum_com"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="30sp"
                    android:gravity="center_horizontal"
                    android:layout_weight="1.0"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/down_button_com"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_arrow_circle_down_black_18dp"
                    style="@style/IconOnlyButton"
                    android:layout_weight="1.0"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stop_home_container_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/up_down_container_com">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stop_Button_com"
                style="@style/StopButton"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="0dp"
                android:text="@string/stop"
                android:layout_weight="1.0"
                android:textSize="40sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/home_pos_button_com"
                style="@style/HomePosButton"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:layout_height="300dp"
                android:layout_marginStart="0dp"
                android:text="@string/home"
                android:textSize="40sp" />

            </LinearLayout>



        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>